--- a/back-end/package.json
+++ b/back-end/package.json
@@ -5,7 +5,12 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:dev": "nodemon src/server.js",
+    "test": "npx cross-env LOG_LEVEL=warn jest --runInBand --detectOpenHandles --forceExit --config ./test/jest.config.js",
+    "test:1": "npm run test -- us-01",
+    "test:drop-database": "node test/drop-database",
+    "test:start": "npx cross-env LOG_LEVEL=warn NODE_ENV=test npm run test:start:run",
+    "test:start:run": "run-s test:drop-database start "
   },
   "keywords": [],
   "author": "",
@@ -14,8 +19,10 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jest": "^26.6.3",
     "knex": "^0.21.12",
     "nodemon": "^3.0.1",
-    "pg": "^8.5.1"
+    "pg": "^8.5.1",
+    "supertest": "^6.1.1"
   }
 }
