--- a/back-end/package.json
+++ b/back-end/package.json
@@ -18,9 +18,11 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1",
+    "express": "^4.18.2",
     "jest": "^26.6.3",
     "knex": "^0.21.12",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1",
     "pg": "^8.5.1",
     "supertest": "^6.1.1"
