--- a/front-end/package.json
+++ b/front-end/package.json
@@ -17,6 +17,8 @@
     "react": "^17.0.1",
     "react-compare-slider": "^2.2.0",
     "react-dom": "^17.0.1",
+    "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.2.2",
     "react-hook-form": "^7.48.2",
     "react-redux": "^8.1.3",
     "react-router": "^5.2.0",
