--- a/front-end/package.json
+++ b/front-end/package.json
@@ -3,12 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emailjs/browser": "^3.11.0",
     "@popperjs/core": "^2.11.8",
     "@reduxjs/toolkit": "^1.9.7",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.3",
+    "@testing-library/user-event": "^12.6.0",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "font-awesome": "^4.7.0",
@@ -17,13 +16,13 @@
     "react": "^17.0.1",
     "react-compare-slider": "^2.2.0",
     "react-dom": "^17.0.1",
-    "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.2.2",
     "react-hook-form": "^7.48.2",
     "react-redux": "^8.1.3",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
+    "react17-facebook-login": "^4.2.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
